docs: Remove typos

--- a/docs/tutorials/page-builder/create-a-new-page-builder-element.mdx
+++ b/docs/tutorials/page-builder/create-a-new-page-builder-element.mdx
@@ -58,10 +58,10 @@ and the Website app need the same plugin to render element in the actual page.
 
 To create a new page element, we need to register two sets of plugins:
 1. For the `admin` app:
-   - a plugin that will defines how it's rendered in the editor
-   - a plugin that will defines all of the available settings and options for it
+   - a plugin that defines how it's rendered in the editor
+   - a plugin that defines all of the available settings and options for it
 2. For the `website` app:
-   - a plugin that will defines how the page element is rendered on the actual page
+   - a plugin that defines how the page element is rendered on the actual page
 
 To better organize files we'll write all the plugins needed for the Admin app in `iFrameElement/src/admin` and plugins needed for
 the Website app in `iFrameElement/src/render`.
