--- a/docs/tutorials/create-a-package-in-monorepo.mdx
+++ b/docs/tutorials/create-a-package-in-monorepo.mdx
@@ -238,7 +238,7 @@ Let's quickly discuss all of them:
 This field defines other packages (dependencies) we will use in the code.
 
 In our case we need the following:
-- [`react`](https://www.npmjs.com/package/react): React is a JavaScript library for creating user interfaces..
+- [`react`](https://www.npmjs.com/package/react): React is a JavaScript library for creating user interfaces.
 - [`react-dom`](https://www.npmjs.com/package/react-dom): Serves as the entry point to the DOM and server renderers for React.
 
 #### `devDependencies`
