docs: add example project folder

--- a/docs/tutorials/page-builder/create-a-new-page-builder-element.mdx
+++ b/docs/tutorials/page-builder/create-a-new-page-builder-element.mdx
@@ -136,6 +136,8 @@ Let's add the new page element in the editor. First, we will add the necessary p
 
 We will start with the [`pb-editor-page-element`](/docs/references/page-builder/plugins#pb-editor-page-element) plugin type.
 
+You can find the full example with all required code [in the example folder here](https://github.com/webiny/webiny-examples/tree/master/iframe-page-element/packages/iFrameElement)
+
 ```tsx title="packages/iFrameElement/src/admin/index.tsx"
 // ...
 // Some code is removed for sake of brevity.
