doc: align comment

--- a/docs/tutorials/page-builder/create-a-new-page-builder-element.mdx
+++ b/docs/tutorials/page-builder/create-a-new-page-builder-element.mdx
@@ -199,12 +199,12 @@ export default () => {
       },
       render(props) {
         /*
-                    Every render function receives the page element's
-                    data assigned to the "element.data" property in
-                    the received props. In here we will store the
-                    "iframe.url" which will be provided via the page
-                    element's settings dialog.
-                */
+          Every render function receives the page element's
+          data assigned to the "element.data" property in
+          the received props. In here we will store the
+          "iframe.url" which will be provided via the page
+          element's settings dialog.
+        */
         return <IFrameEmbed {...props} />;
       },
       renderElementPreview({ width, height }) {
@@ -295,7 +295,7 @@ Notice we've added `webiny-pb-page-element-iframe` CSS class, which enables us t
 
 The next plugin we'll need to define is the [`pb-editor-page-element-advanced-settings`](/docs/references/page-builder/plugins#pb-editor-page-element-advanced-settings),
 which we will use to render required UI for settings so the user can provide an iframe URL.
-The settings UI will be shown automatically in right sidebar when the user drags and drops the page element on the page.
+The settings UI will be shown automatically in the right sidebar when the user drags and drops the page element on the page.
 
 This plugin type will be added in the `packages/iFrameElement/src/admin/index.tsx` file too.
 
