docs: Fix file reference to folder reference

--- a/docs/tutorials/page-builder/customize-an-existing-page-builder-element.mdx
+++ b/docs/tutorials/page-builder/customize-an-existing-page-builder-element.mdx
@@ -32,7 +32,7 @@ There's only one plugin you need to modify to customize an element: [`PbEditorPa
 
 Plugins of this type require a `create` function (to create an element data structure), and a `render` function that returns a React element that gets rendered in the editor.
 
-All element plugins are registered as factory so you can customize them by passing the following options:
+All element plugins are registered as a factory so you can customize them by passing the following options:
 
 ```ts title="@webiny/app-page-builder/types"
 type PbEditorElementPluginArgs = {
@@ -48,7 +48,7 @@ type PbEditorElementPluginArgs = {
 
 ## Add Settings in an Element
 
-Head over to the `apps/admin/code/src/plugins/pageBuilder.ts` file where all the plugins related to the Page Builder app are located.
+Head over to the `apps/admin/code/src/plugins/pageBuilder/` folder where all the plugins related to the Page Builder app are located.
 
 As you can see there are two core sets of plugins:
 
