--- a/docs/tutorials/page-builder/customize-an-existing-page-builder-element.mdx
+++ b/docs/tutorials/page-builder/customize-an-existing-page-builder-element.mdx
@@ -81,17 +81,17 @@ Let's make the following change:
 
 ```ts title="apps/admin/code/src/plugins/pageBuilder/editorPlugins.ts"
 // Some code is removed for the sake of brevity.
-
-...
-button({
-  settings: defaultValue => [
-    ...defaultValue,
-    "pb-editor-page-element-style-settings-padding",
-    "pb-editor-page-element-style-settings-width"
-  ]
-}),
-...
-
+export default [
+  ...
+  button({
+    settings: defaultValue => [
+      ...defaultValue,
+      "pb-editor-page-element-style-settings-padding",
+      "pb-editor-page-element-style-settings-width"
+    ]
+  }),
+  ...
+]
 //
 // Other element plugins.
 //
